day9_ingress/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations: # Configura o rewrite da URL   
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx #inseri a classe do ingress, pois nao funcionou sem. 
  rules:
  - http:
      paths:
      - path: /giropops-senhas
        pathType: Prefix
        backend:
          service: 
            name: giropops-senhas
            port:
              number: 5000
